Fix document body overflows

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -21,10 +21,15 @@ code {
   font-size: 14px;
   font-weight: 700;
   cursor: pointer;
+  margin-bottom: 100px;
 }
 
 button:focus {
   outline: none;
+}
+
+.hello p {
+  font-size: 30px;
 }
 
 p {
@@ -32,12 +37,10 @@ p {
 }
 
 .app-container {
-  background: #2b5876;
-  background: -webkit-linear-gradient(to right, #4e4376, #2b5876);
-  background: linear-gradient(to right, #4e4376, #2b5876);
-
-  /* height: 4000px; */
-  height: 100vh;
+  background: #0e4869;
+  margin: 0px;
+  /* height: 100vh; */
+  /* height: 2000px; */
   padding: 0px 80px;
   display: flex;
   overflow: scroll;
@@ -45,10 +48,22 @@ p {
   justify-content: space-between;
 }
 
+@media (max-width: 670px) {
+  .app-container {
+    padding: 0px 40px; 
+  }
+}
+
 .intro {
   color: #fff;
   flex: 30%;
   margin-right: 40px;
+}
+
+.intro h2 {
+  font-size: 20px;
+  line-height: 50px;
+  margin: 20px 0px;
 }
 
 .intro h1 {
@@ -68,7 +83,7 @@ p {
 
 .apps {
   display: flex;
-  flex: 70%;
+  /* flex: 70%; */
   background: #fff;
   flex-direction: row-reverse;
   border-radius: 10px;
@@ -97,6 +112,10 @@ p {
   overflow: scroll;
 }
 
+/* .no-padding {
+  padding-block: ;
+} */
+
 .box {
   padding: 20px;
   border: 2px solid #fff;
@@ -109,7 +128,7 @@ h1, h2, h3, p {
 }
 
 .bg-pink {
-  background: #DD2476;
+  background: #941143;
   color: #fff;
   border-right: 0px;
   border-bottom: 0px;
@@ -123,19 +142,19 @@ h1, h2, h3, p {
 }
 
 .bg-pink p {
-  font-size: 30px;
+  font-size: 20px;
   line-height: 30px;
 }
 
 .bg-yellow {
   display: flex;
-  background: #11a3cf;
+  background: #0e4869;
   justify-content: center;
   border-bottom: 0px;
 }
 
 .bg-green {
-  background: #42b127;
+  background: #2ca30f;
   display: flex;
   border-right: 0px;
   flex-direction: column;
